--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -14,8 +14,14 @@
 		<string>6.0</string>
 		<key>CFBundleName</key>
 		<string>iti_23_g2</string>
+		<key>LSApplicationQueriesSchemes</key>
+        <array>
+          <string>sms</string>
+          <string>tel</string>
+        </array>
 		<key>CFBundlePackageType</key>
 		<string>APPL</string>
+
 		<key>CFBundleShortVersionString</key>
 		<string>$(FLUTTER_BUILD_NAME)</string>
 		<key>CFBundleSignature</key>
