--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  url_launcher: ^6.1.11
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
