--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   hive_flutter: ^1.1.0
   url_launcher: ^6.1.11
   image_picker: ^1.0.4
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
