--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   url_launcher: ^6.1.11
   image_picker: ^1.0.4
   flutter_bloc: ^8.1.3
+  http: ^1.1.0
+  dio: ^5.3.2
 
 dev_dependencies:
   flutter_test:
