--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   http: ^1.1.0
   dio: ^5.3.2
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
